# arcgentica

./: .envrc  .gitignore  README.md  common.py  flake.nix  main.py  pyproject.toml  score.py  solve.py  submit.py  summary.py
.github/workflows/: ci.yml
arc_agent/: __init__.py  agent.py  prompts.py  types.py
output/2025/anthropic/claude-opus-4-6/final/: config.json  submission.json
output/2025/anthropic/claude-opus-4-6/final/results/0934a4d8/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/135a2760/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/136b0064/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/13e47133/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/142ca369/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/16b78196/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/16de56c4/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/1818057f/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/195c6913/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/1ae2feb7/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/20270e3b/: attempt_0.json  attempt_1.json
output/2025/anthropic/claude-opus-4-6/final/results/20a9e565/: attempt_0.json  attempt_1.json
(+216 files in other folders)
